--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,14 @@ img {
 
 body {
     text-align: center;
-    width: 400px;
-    height: 850px;
 }
 
 button {
     height: 75px;
     width: 75px;
+}
+
+.jackpot {
+    font-size: 48px;
+    
 }
