--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@
     width: 320px;
     display: block;
     margin-top: 10px;
+    background-color: white;
    }
    .left {
     float: left;
@@ -60,10 +61,13 @@ body {
     text-align: center;
     width: 320px;
     margin: auto;
+    background-color: black;
 }
 
 .jackpot {
     font-size: 48px;
+    color: gold;
+    background-color: black;
 
 }
 
