--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,3 +66,29 @@ body {
     font-size: 48px;
 }
 
+
+/* Home page */
+/* gameboxes */
+body > .millionBox {
+    height: 75px;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+body > .gameBox {
+    height: 128px;
+    width: 40%;
+    display: inline-block;
+}
+
+body > .gameBox >img {
+    height: 75px;
+    width: 75px;
+    display: inline-block;
+}
+
+body > .promoBox {
+    height: 75px;
+    width: 100%;
+}
