--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,35 @@
- /* Style the navigation menu */
- .topnav {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-  }
-  
-  /* Hide the links inside the navigation menu (except for logo/home) */
-  .topnav #myLinks {
-    display: none;
-  }
-  
-  /* Style navigation menu links */
-  .topnav a {
-    color: black;
-    text-decoration: none;
-    font-size: 20px;
-    display: block;
-    
-  }
-  
+ /* Header */
+
 .header{
     width: 320px;
-    display: block;
+    display: inline-block;
     margin-top: 10px;
+    margin-bottom: 20px;
    }
    .left {
-    float: left;
-    width: 50%;
+    display: inline-block;
+    width: 60px;
     font-size: 20px;
+    text-align: left;
+    margin: auto;
    }
+
+   .center {
+    display: inline-block;
+    width: 140px;
+    font-size: 20px;
+    text-align: center;
+    margin: auto;
+   }
+
    .right {
-    float: right;
-    width: 50%;
+    display: inline-block;
+    width: 60px;
     font-size: 20px;
     text-align: right;
+    margin: auto;
    }
-   /* Style the hamburger menu */
-   .topnav a.icon {
-    display: block;
-    float: left;
-    right: 0;
-    top: 0;
-  }
-
+   
 
 img {
     width: 275px;
@@ -73,21 +60,21 @@ body > .millionBox {
     height: 75px;
     width: 100%;
     margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 body > .gameBox {
-    height: 128px;
-    width: 40%;
+    height: 100px;
+    width: 150px;
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 25px;
 }
 
 body > .gameBox >img {
-    height: 75%;
-    width: 75%;
+    height: 75px;
+    width: 75px;
     margin: auto;
     border-radius: 25%;
+    display: block;
 }
 
 body > .promoBox {
