--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ body > .gameBox {
     height: 100px;
     width: 80px;
     display: inline-block;
-    margin-top: 25px;
+    margin: 10px 10px 10px 10px;
 }
 
 body > .gameBox >img {
@@ -83,6 +83,7 @@ body > .promoBox {
     height: 75px;
     width: 100%;
     margin-top: 20px;
+    margin-bottom: 20px;
 
 }
 
@@ -98,24 +99,16 @@ a {
     color: white;
 }
 
-a > .millionBox {
-    height: 75px;
-    width: 100%;
-    margin-top: 20px;
-    
-}
-
 a > .gameBox {
-    height: 100px;
-    width: 100px;
+    height: 120px;
+    width: 120px;
     display: inline-block;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin: 10px 10px 10px 10px;
 }
 
 a > .gameBox >img {
-    height: 75px;
-    width: 75px;
+    height: 90px;
+    width: 90px;
     margin: auto;
     border-radius: 25%;
     display: block;
@@ -125,7 +118,8 @@ a > .promoBox {
     height: 75px;
     width: 100%;
     margin-top: 20px;
-
+    margin-bottom: 20px;
+    margin: auto;
 }
 
 a > .promoBox > img {
