--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,19 +130,38 @@ a > .gameBox2 >img {
 }
 
 a > .gameBox3 {
-    height: 120px;
+    height: 80px;
     width: 300px;
     display: inline-block;
     margin: 10px 10px 10px 10px;
+    outline-style: solid;
+    outline-color: grey;
+    border-radius: 2.5%;
 }
 
 a > .gameBox3 >img {
-    height: 100px;
-    width: 280px;
+    height: 80px;
+    width: 300px;
     margin: auto;
     border-radius: 2.5%;
     display: block;
 }
+
+
+a > .gameBox3 > .anybetHeading {
+    font-family: sans-serif;
+    text-shadow: 4px 4px 0px white;
+    mix-blend-mode: screen;
+    animation: fadeIn 5s linear alternate infinite;
+    color: black;
+    text-align: center;
+    height: 75px;
+    width: 100%;
+    margin: auto;
+  }
+
+
+
 
 a > .gameBox4 {
     height: 80px;
@@ -203,19 +222,21 @@ a:visited {
 
 .anybetLogoContainer {
     background-color: black;
-    display: flex;
-    height: 100px;
-    width: 250px;
-    padding: 1rem;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    height: 80px;
+    width: 300px;
+    margin: 10px 10px 10px 10px;
   }
   
   .anybetHeading {
-    font-size: 36px;
+    font-size: 56px;
+    font-family: sans-serif;
     text-shadow: 4px 4px 0px white;
     mix-blend-mode: screen;
-    animation: fadeIn 1.5s linear alternate infinite;
+    animation: fadeIn 5s linear alternate infinite;
+    color: black;
+    text-align: center;
+    margin: auto;
   }
   
   @keyframes fadeIn {
@@ -360,7 +381,7 @@ body > #anybetPage {
     width: 100%;
     height: 2px;
     background: linear-gradient(90deg, transparent, white);
-    animation: btn-anim1 1s linear infinite;
+    animation: btn-anim1 2.5s linear infinite;
   }
   
   @keyframes btn-anim1 {
@@ -378,7 +399,7 @@ body > #anybetPage {
     width: 2px;
     height: 100%;
     background: linear-gradient(180deg, transparent, white);
-    animation: btn-anim2 1s linear infinite;
+    animation: btn-anim2 2.5s linear infinite;
     animation-delay: .25s
   }
   
@@ -397,7 +418,7 @@ body > #anybetPage {
     width: 100%;
     height: 2px;
     background: linear-gradient(270deg, transparent, white);
-    animation: btn-anim3 1s linear infinite;
+    animation: btn-anim3 2.5s linear infinite;
     animation-delay: .5s
   }
   
@@ -416,7 +437,7 @@ body > #anybetPage {
     width: 2px;
     height: 100%;
     background: linear-gradient(360deg, transparent, white);
-    animation: btn-anim4 1s linear infinite;
+    animation: btn-anim4 2.5s linear infinite;
     animation-delay: .75s
   }
   
