--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,15 +115,30 @@ a > .gameBox1 >img {
 }
 
 a > .gameBox2 {
-    height: 360px;
-    width: 120px;
-    display: inline-block;
+    height: 320px;
+    width: 130px;
     margin: 10px 10px 10px 10px;
+    float: left;
 }
 
 a > .gameBox2 >img {
-    height: 340px;
-    width: 150px;
+    height: 300px;
+    width: 130px;
+    margin: auto;
+    border-radius: 5%;
+    display: block;
+}
+
+a > .gameBox2Small {
+    height: 320px;
+    width: 130px;
+    margin: 10px 10px 10px 10px;
+    float: right;
+}
+
+a > .gameBox2Small >img {
+    height: 300px;
+    width: 130px;
     margin: auto;
     border-radius: 5%;
     display: block;
@@ -146,6 +161,7 @@ a > .gameBox3 >img {
     border-radius: 2.5%;
     display: block;
 }
+
 
 
 a > .gameBox3 > .anybetHeading {
