--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,13 +512,21 @@ font-size: 50px;
 
 
   /*Anybet Results Animation*/
+
+  .anybetRes {
+    width: auto;
+    text-align: center;
+    white-space:nowrap;
+    display: inline-block;
+  }
+
   #anybetResuwltA {
     animation: infinite;
   }
 
   .randoImage {
-    width: 25px;
-    height: 25px;
+    width: auto;
+    height: auto;
     background-image: "";
   }
 
