--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,3 +654,9 @@ font-size: 50px;
   h2 {
     font-size: 18px;
   }
+
+  #payouts {
+    background-color: rgb(15, 15, 15);
+    border-radius: 2.5%;
+    color: grey;
+  }
