--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -4,7 +4,11 @@ body {
     margin:auto; 
     color: hsl(0, 100%, 31%);
     background-color: black;
+    position: fixed; 
+    height: 100%;
 }
+
+
 
 /* the :link pseudo class */
 a:link {
@@ -21,6 +25,8 @@ a:visited {
 .container {
     width: 100vw;
     height: 100vh;
+    position: fixed; 
+    height: 100%;
 }
 
 
@@ -29,6 +35,7 @@ a:visited {
     height: 5vh;
     display: inline-block;
     margin: 2%;
+    vertical-align: auto;
 }
 
 .leftHeader {
@@ -36,12 +43,14 @@ a:visited {
     display: inline-block;
     text-align: left;
     color:white;
+    font-size: 16px;
 }
 
 .centerHeader {
     width: 30vw;
     display: inline-block;
     text-align: center;
+    font-size: 22px;
 }
 
 .rightHeader {
@@ -50,6 +59,7 @@ a:visited {
     text-align: right;
     color:white;
     font-family: sans-serif;
+    font-size: 16px;
 }
 
 
@@ -107,13 +117,12 @@ a:visited {
   }
 
 
-  /*NFTwist*/
-  .rubic1 {
+/*NFTwist*/
+.rubic1 {
     width: 150px;
     height: 150px;
     background-color: yellow;
     display: inline-block;
-
 }
 
 .rubic2 {
@@ -138,7 +147,7 @@ a:visited {
 }
 
 .bet-box .user-box-nftSpin input {
-    width: 24vw;
+    width: 48vw;
     font-size: 24px;
     color: #fff;
     border: none;
@@ -146,4 +155,18 @@ a:visited {
     outline: none;
     background: transparent;
     text-align: center;
+  }
+
+
+  /*Anybet*/
+
+  .anybetHeading {
+    font-size: 64px;
+    font-family: sans-serif;
+    text-shadow: 4px 4px 0px hsl(0, 100%, 31%);
+    mix-blend-mode: screen;
+    animation: fadeIn 5s linear alternate infinite;
+    color: black;
+    text-align: center;
+    margin: auto;
   }
