--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,11 @@ body {
  /* Header */
 
  .header {
-    width: 96vw;
-    height: 5vh;
+    width: 100%;
+    height: auto;
     display: inline-block;
-    margin: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
     vertical-align: auto;
     border-bottom: 1px solid hsl(0, 100%, 31%);
 }
@@ -49,6 +50,22 @@ body {
     color:white;
     font-family: sans-serif;
     font-size: 16px;
+}
+
+/*Game Area*/
+.game {
+    width: 96vw;
+    height: 50vh;
+    display: inline-block;
+    margin: 1vh;
+}
+
+/*Button Area*/
+.button {
+    width: 96vw;
+    height: 10vh;
+    display: inline-block;
+    margin: 1vh;
 }
    
 /* NFT Spin */
@@ -297,7 +314,6 @@ body > #anybetPage {
 .bet-box {
     position: static;
     width: 80vw;
-    padding: 25px;
     margin: auto;
     background: rgba(0,0,0,.5);
     box-sizing: border-box;
@@ -374,7 +390,6 @@ body > #anybetPage {
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
-    margin-top: 40px;
     letter-spacing: 4px
   }
   
