--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@ body {
     margin-top: 1%;
     margin-bottom: 1%;
     vertical-align: auto;
-    border-bottom: 1px solid hsl(0, 100%, 31%);
 }
 
 .leftHeader {
@@ -40,7 +39,7 @@ body {
     width: 30vw;
     display: inline-block;
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
 }
 
 .rightHeader {
@@ -288,6 +287,7 @@ a:visited {
     color: black;
     text-align: center;
     margin: auto;
+    padding-top: 10px;
   }
   
   @keyframes fadeIn {
