--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,10 @@ body {
     margin:auto; 
     color: hsl(0, 100%, 31%);
     background-color: black;
-    position: fixed; 
     height: 100%;
 }
 
-/*Container*/
-.container {
-    width: 100vw;
-    height: 100svh;
-    position: fixed; 
-    height: 100%;
-}
-
- /* Header */
+/* Header */
 
  .header {
     width: 100%;
@@ -28,7 +19,7 @@ body {
 }
 
 .leftHeader {
-    width: 30vw;
+    width: 20%;
     display: inline-block;
     text-align: left;
     color:white;
@@ -36,14 +27,14 @@ body {
 }
 
 .centerHeader {
-    width: 30vw;
+    width: 50%;
     display: inline-block;
     text-align: center;
     font-size: 20px;
 }
 
 .rightHeader {
-    width: 30vw;
+    width: 20%;
     display: inline-block;
     text-align: right;
     color:white;
@@ -54,7 +45,7 @@ body {
 /*Game Area*/
 .game {
     width: 96vw;
-    height: 50vh;
+    height: auto;
     display: inline-block;
     margin: 1vh;
 }
@@ -65,6 +56,7 @@ body {
     height: 10vh;
     display: inline-block;
     margin: 1vh;
+    margin-bottom: 2vh;
 }
    
 /* NFT Spin */
@@ -313,7 +305,7 @@ body > #anybetPage {
 
 .bet-box {
     position: static;
-    width: 80vw;
+    width: 50vw;
     margin: auto;
     background: rgba(0,0,0,.5);
     box-sizing: border-box;
@@ -690,6 +682,10 @@ font-size: 50px;
 
 /* Rubic */
 
+.rubicHeading {
+    font-size: 24;
+}
+
 .rubic1 {
     width: 150px;
     height: 150px;
@@ -717,4 +713,10 @@ font-size: 50px;
     height: 150px;
     background-color: orange;
     display: inline-block;
+}
+
+/*Superflip*/
+
+.superflipHeading {
+    font-size: 24;
 }
