--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,3 +748,14 @@ font-size: 50px;
     border-radius: 2.5%;
 }
 
+.bet-box .user-box-superflip input {
+    width: 100%;
+    font-size: 24px;
+    color: #fff;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+    text-align: center;
+  }
+
