--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
     color: hsl(0, 100%, 31%);
     background-color: black;
     height: 100%;
+    width: 100vw;
 }
 
 /* Header */
@@ -40,6 +41,13 @@ body {
     color:white;
     font-family: sans-serif;
     font-size: 16px;
+}
+
+.adBannerHome {
+width: 90vw;
+height: auto;
+margin: auto;
+border: 0.25vh solid hsl(0, 100%, 31%);
 }
 
 /*Game Area*/
