--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,21 @@ body {
 /* Header */
 
  .header {
-    width: 98vw;
+    width: 100vw;
     height: auto;
     display: inline-block;
-    margin-top: 2%;
-    margin-bottom: 1%;
+    margin-top: -1vh;
+    margin-bottom: 2vh;
     vertical-align: auto;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px -2px white;
+    position: sticky;
+    background: black;
+    left: 0;
+    border: none;
+    z-index: 9001;
+    padding: 1vh 0vw 0.5vh 0vw;
+    top: 0;
 }
 
 .leftHeader {
