--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@ body {
 .leftHeader {
     width: 45vw;
     text-align: left;
-    color:white;
     font-size: 20px;
     display: inline-block;
     color: hsl(0, 100%, 31%);
@@ -310,7 +309,7 @@ a:link {
 }
 /* next the :visited pseudo class */
 a:visited {
-    color: white;
+    color: hsl(0, 100%, 31%);
 }
 
 
